Fix: Fix Issue-1179 wrong fonts in some views (#1986)

--- a/src/app/styles/global-font.styl
+++ b/src/app/styles/global-font.styl
@@ -18,13 +18,6 @@
 .v-align-b{
      vertical-align: bottom;
 }
-.font-alibaba-sans {
-  font-family: 'Alibaba Sans';
-}
-
-.font-roboto {
-  font-family: 'Roboto, Helvetica Neue';
-}
 
 .font-size-large {
     font-size: $font-size-large;
@@ -64,7 +57,6 @@
 }
 
 .main-text-outstanding {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $black-2;
@@ -77,14 +69,12 @@
 }
 
 .main-text-normal {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $black-3;
 }
 
 .main-text-normal-with-hover {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $black-3;
@@ -97,21 +87,18 @@
 }
 
 .unit-text {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $black-4;
 }
 
 .disabled-text {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $black-5;
 }
 
 .white-text {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $white
@@ -119,7 +106,6 @@
 }
 
 .link-text {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     color: $blue-2;
@@ -134,21 +120,18 @@
 }
 
 .popover-message {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-small;
     font-weight: $font-weight-middle;
     color: $black-2;
 }
 
 .tooltip-message {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-small;
     font-weight: $font-weight-normal;
     color: $black-3;
 }
 
 .additional-message {
-    font-family: 'Roboto, Helvetica Neue';
     font-size: $font-size-small;
     font-weight: $font-weight-normal;
     color: $black-4;
