--- a/src/app/styles/scaffolding.styl
+++ b/src/app/styles/scaffolding.styl
@@ -27,7 +27,6 @@ html {
 }
 
 body {
-  font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base-computed;
   color: $text-color;
@@ -39,7 +38,6 @@ input,
 button,
 select,
 textarea {
-  font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
