--- a/src/app/styles/xterm.styl
+++ b/src/app/styles/xterm.styl
@@ -3,7 +3,7 @@
 // @stylint on
 
 .terminal {
-    font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+    font-family Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     background-color: #000;
     color: #FFF;
 }
