--- a/src/app/ui/components/Tabs/styles.styl
+++ b/src/app/ui/components/Tabs/styles.styl
@@ -14,7 +14,6 @@
             :global(.ant-tabs-tab-btn) {
                 margin: 0 auto;
                 padding: 0 8px;
-                font-family: 'Rotobo';
                 font-size: 18px;
             }
         }
