--- a/src/app/ui/widgets/CncLaserTopRight/styles.styl
+++ b/src/app/ui/widgets/CncLaserTopRight/styles.styl
@@ -37,7 +37,6 @@ $z-index-float = 500
         margin-left: 16px
         height: 16px;
         font-size: 14px;
-        font-family: Roboto-Medium, Roboto;
         font-weight: 500;
         color: #282828;
         line-height: 16px;
@@ -48,7 +47,6 @@ $z-index-float = 500
         margin-left: 16px
         height: 14px;
         font-size: 14px;
-        font-family: Roboto-Regular, Roboto;
         font-weight: 400
         color: #282828;
         line-height: 16px
